Fixed weird expressions and few grammar mistakes. 'Americanized' certain words.

--- a/2-components.tex
+++ b/2-components.tex
@@ -1,6 +1,6 @@
 \section{Open Source SDN Components}
 
-Even though the concept of software-defined networking dates back to year 2004 \cite{robert2012system} the first widely recognised applications did not follow until several years later. The most notable one is the widespread OpenFlow protocol \cite{OpenFlow1.0.0} which made its official debut in 2009 and has since become the most prevalent protocol for SDN. The available applications on the market reflect the pervasiveness of OpenFlow as practically all of them are built to support the protocol. Keeping SDN’s basic concepts and architectural solutions in mind it does not come as a surprise that the network controllers and switch implementations are the most common SDN-related applications. In this section, we present a comprehensive survey of existing open source components for SDN.
+Even though the concept of software-defined networking dates back to year 2004 \cite{robert2012system} the first widely recognized applications did not follow until several years later. The most notable one is the widespread OpenFlow protocol \cite{OpenFlow1.0.0} which made its official debut in 2009 and has since become the most prevalent protocol for SDN. The available applications on the market reflect the pervasiveness of OpenFlow as practically all of them are built to support the protocol. Keeping SDN’s basic concepts and architectural solutions in mind it does not come as a surprise that the network controllers and switch implementations are the most common SDN-related applications. In this section, we present a comprehensive survey of existing open source components for SDN.
 
 \subsection{Controllers}
 
@@ -18,10 +18,10 @@ Most OpenFlow controllers are organized in the same fashion as shown in Figure ~
 
 	Beacon is another notable OF controller \cite{Beacon}. It was released in 2010 and it is written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C and C++ portability problems and to reduce the developers’ burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu \cite{Ryu} and Ruby-based Trema \cite{Trema}.
 
-One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as a basis for one of the most popular OpenFlow controllers: Floodlight \cite{Floodlight}. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans. Unlike Beacon, Floodlight does not rely on an OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
+One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as the basis for one of the most popular OpenFlow controllers: Floodlight \cite{Floodlight}. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans with notable work history in big companies like Cisco and Juniper. Unlike Beacon, Floodlight does not rely on an OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
  Big Switch has in the past lobbied for Floodlight to be included in Open Daylight Project’s codebase \cite{BAN13} but the project opted for Cisco’s controller implementation. 
 
-Open Daylight Project \cite{ODL}, or ODL in short, is commonly considered the leading SDN project with its substantial company backing and large developer community. The project members involved include practically every company relevant to the field. These are for instance Cisco, Microsoft, IBM, Hewlett-Packard, Juniper, Red Hat, VMware and many more. Feature highlights of Open Daylight include a robust REST API and south-bound communication which allows for using other non-Openflow protocols: OVSDB, NETCONF, LISP, BGP, PCEP and SNMP. Naturally ODP contains components to take advantage of the protocols as well as other components not found in any other SDN projects e.g. DDOS detection and counter-measures. The basic architecture is rather similar to other controllers, but different core components, applications built on top of them and protocol plugins that offer different services and use different interfaces complicate the organization a bit. Figure ~\ref{fig:ODL} shows the architecture and some of the components in the bundle. For prototyping applications that only make use of OpenFlow the sheer number of different components in ODP may prove intimidating and distracting, but generally the ODP community offers decent documentation and guides though the quality varies from one component to another. In comparison with Floodlight, ODP is likely to be more viable in a real business environment because of the features it offers and its fast evolving nature. However, when developing quick prototypes or SDN applications that only make use of OpenFlow, Floodlight may be a better choice due to being simpler, smaller and at the moment better documented.
+Open Daylight Project \cite{ODL}, or ODL in short, is commonly considered the leading SDN project with its substantial company backing and large developer community. The project members involved include practically every company relevant to the field. These are for instance Cisco, Microsoft, IBM, Hewlett-Packard, Juniper, Red Hat, VMware and many more. Feature highlights of Open Daylight include a robust REST API and southbound communication which allows using other non-Openflow protocols: OVSDB, NETCONF, LISP, BGP, PCEP and SNMP. Naturally ODL contains components to take advantage of the protocols as well as other components not found in any other SDN projects e.g. DDOS detection and counter-measures. The basic architecture is rather similar to other controllers, but different core components, applications built on top of them and protocol plugins that offer different services and use different interfaces complicate the organization a bit. Figure ~\ref{fig:ODL} shows the architecture and some of the components in the bundle. For prototyping applications that only make use of OpenFlow the sheer number of different components in ODP may prove intimidating and distracting, but generally the ODP community offers decent documentation and guides though the quality varies from one component to another. In comparison with Floodlight, ODP is likely to be more viable in a real business environment because of the features it offers and its fast evolving nature. However, when developing quick prototypes or SDN applications that only make use of OpenFlow, Floodlight may be a better choice due to being simpler, smaller and at the moment better documented.
 
 \begin{figure}[h!t]
 \centering
