--- a/3-chaining.tex
+++ b/3-chaining.tex
@@ -1,4 +1,4 @@
-\section{SDN-based service chaining for mobile networks}
+\section{SDN-based Service Chaining for Mobile Networks}
 
 SDN (software-defined networking) has revolutionized designing and managing networks over the past few years. Routers and switches operate with complex software, which is closed source and dedicated to the private network companies. Moreover, each of these devices come with their own configuration interfaces that are different between vendors, which makes the work of network administrators exhausting to configure each of these individual network devices. \cite{FRZ13}
 
