--- a/report.tex
+++ b/report.tex
@@ -36,7 +36,7 @@
 \author{Lauri Suomalainen, Emad Nikkhouy, Aaron Yi Ding, Sasu Tarkoma}
 %\date{\today}
 \date{August 15, 2014}
-\level{Technical Report C-2014-}
+\level{Technical Report C-2014-2}
 
 \abstract{Software-Defined Networking (SDN) is a novel solution to network configuration and management. Its openness and programmability features have greatly motivated the open source communities where numerous applications and tools are developed for various R\&D purposes. For the strength of SDN, the upcoming 5th Generation mobile networks (5G) can also benefit from the modular and open design to innovate the network architecture and services. In this report, we present a survey of existing open source platforms, applications and tools for SDN and 5G research. We discuss the potential directions and share our perspectives in this domain.}
 
